--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -24,4 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
-      - run: npm run test tests/git.test.js
+      - name: NPM install
+        run: npm install
+      - name: Run tests
+        run: npm run test tests/git.test.js
