--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "mysql": "^2.18.1",
-    "selenium-webdriver": "^4.8.1"
+    "selenium-webdriver": "^4.8.1",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "nodemon": "^2.0.22"
   }
 }
