--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "selenium-webdriver": "^4.8.1",
-    "express": "^4.18.2"
+    "selenium-webdriver": "^4.8.1"
   },
   "devDependencies": {
     "jest": "^29.5.0",
-    "supertest": "^6.3.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
