--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mongodb": "^5.6.0",
     "mysql": "^2.18.1",
     "selenium-webdriver": "^4.8.1"
   },
