--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.1",
     "selenium-webdriver": "^4.8.1"
   },
   "devDependencies": {
