--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whatheure",
   "version": "1.0.0",
   "description": "",
-  "main": "positionstack.js",
+  "main": "server.js",
   "scripts": {
     "test": "jest"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
