--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,8 @@
         "ejs": "^3.1.9",
         "express": "^4.18.2",
         "node-fetch": "^3.3.1"
+    },
+    "dependencies": {
+        "cors": "^2.8.5"
     }
 }
