--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,6 @@ services:
     depends_on:
       - backend
     ports:
-      - "8080:80"
+      - "80:5173"
+    env_file:
+      - ./frontend/.env
