--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM node:16.20.0-alpine3.18
 WORKDIR /backend
-COPY "package*.json" "./"
+COPY ["package.json", "package-lock.json*", "./"]
 RUN npm install
 COPY . .
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
