--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,10 @@
     "devDependencies": {
         "dotenv": "^16.3.1",
         "ejs": "^3.1.9",
-        "express": "^4.18.2",
-        "node-fetch": "^3.3.1"
+        "express": "^4.18.2"
     },
     "dependencies": {
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "https": "^1.0.0"
     }
 }
