--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: whatheure-backend
     ports:
       - "8888:8888"
+    env_file:
+      - ./backend/.env
   frontend:
     container_name: frontend
     build: ./frontend
@@ -15,5 +17,3 @@ services:
       - backend
     ports:
       - "80:5173"
-    env_file:
-      - ./frontend/.env
