--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM node:16.20.0-alpine3.18
 WORKDIR /frontend
-COPY "package*.json" "./"
+COPY ["package.json", "package-lock.json*", "./"]
 RUN npm install
 COPY . .
 CMD [ "npm", "run", "dev"]
