--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-MARIADB_PASSWORD=""
+DB_ROOT_PASSWORD=your_root_password
+DB_NAME=your_database_name
+DB_USER=your_username
+DB_PASSWORD=your_password
