--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
         "node-fetch": "^3.3.1"
     },
     "dependencies": {
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "https": "^1.0.0",
+        "mariadb": "^3.2.0"
     }
 }
