--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8888:8888"
     env_file:
       - ./backend/.env
+
   frontend:
     container_name: frontend
     build: ./frontend
@@ -17,3 +18,18 @@ services:
       - backend
     ports:
       - "80:5173"
+
+  proxy:
+    container_name: nginx
+    image: nginx
+    depends_on:
+      - backend
+      - frontend
+    ports:
+      - "80:80"
+    volumes:
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+
+volumes:
+  db-data:
+  db-config:
