--- a/default.conf
+++ b/default.conf
@@ -10,16 +10,16 @@
         proxy_set_header X-Real-IP  $remote_addr;
 	proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
-        proxy_pass       http://front:5173;
+        proxy_pass       http://frontend:5173;
         proxy_redirect   off;
     }
 
 
-    location /api {
+    location /api/ {
         proxy_set_header X-Real-IP  $remote_addr;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header Host $host;
-        proxy_pass       http://back:8888;
+        proxy_pass       http://backend:8888;
         proxy_redirect   off;
 
    }
