--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,5 +9,8 @@
     },
     "dependencies": {
         "vite": "^4.3.9"
+    },
+    "devDependencies": {
+        "@esbuild/win32-x64": "^0.18.6"
     }
 }
